src/objects/Campaign_Apps__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account Name  (read only from related App)</description>
        <formula>Application__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Name  (read only from related App)</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Category__c</fullName>
        <description>App Category, from the Application record</description>
        <formula>text(Application__r.Application_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>App Category, from the Application record</inlineHelpText>
        <label>App Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Status__c</fullName>
        <label>App Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Committed</fullName>
                <color>#990000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
                <color>#663300</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Feasible</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Ship</fullName>
                <color>#33FF33</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <inlineHelpText>This is a list of all related Applications for this Campaign</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Campaign Apps</relationshipLabel>
        <relationshipName>Campaign_Apps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Booth_Status__c</fullName>
        <label>Booth Status</label>
        <picklist>
            <picklistValues>
                <fullName>Nominated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <inlineHelpText>This is a list of all Related Campaigns for this Application</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Apps</relationshipLabel>
        <relationshipName>Campaign_Apps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contacted_Partner__c</fullName>
        <inlineHelpText>Have we contacted the partner and discussed this campaign with them?</inlineHelpText>
        <label>Contacted Partner?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <color>#CC9933</color>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <color>#FF6666</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Please enter any pertinent notes related to the Application</inlineHelpText>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>What is the priority of this Application on this list?</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Submission_Date__c</fullName>
        <inlineHelpText>When do you expect this Application to be submitted?</inlineHelpText>
        <label>Projected Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>URL_for_Download__c</fullName>
        <description>URL for Download, from the related Application record</description>
        <formula>Application__r.URL_for_Download__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>URL for Download, from the related Application record</inlineHelpText>
        <label>URL for Download</label>
        <type>Text</type>
    </fields>
    <label>Campaign App</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Campaign Apps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Apps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>